added ru locale

--- a/app/src/main/res/layout/drop_text_item.xml
+++ b/app/src/main/res/layout/drop_text_item.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 13.03.20 14:40
+  ~ Last modified 30.03.20 21:02
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -13,7 +13,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:padding="16dp"
+	android:padding="@dimen/general_size_16dp"
 	android:ellipsize="end"
 	android:maxLines="1"
 	android:textAppearance="@style/regular_text"
