--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 23.03.20 18:31
+  ~ Last modified 30.03.20 21:02
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -63,7 +63,7 @@
 					android:layout_width="match_parent"
 					android:layout_height="10dp"
 					android:layout_gravity="bottom"
-					android:layout_marginBottom="8dp"
+					android:layout_marginBottom="@dimen/general_size_8dp"
 					android:background="@null"
 
 					app:tabBackground="@drawable/tab_dot_unselected_state"
@@ -100,7 +100,7 @@
 					android:id="@+id/tvProfileAboutHeader"
 					android:layout_width="0dp"
 					android:layout_height="wrap_content"
-					android:padding="@dimen/general_margin_16"
+					android:padding="@dimen/general_size_16dp"
 
 					android:text="@string/profile_about_header_text"
 					android:textSize="24sp"
@@ -132,7 +132,7 @@
 					android:id="@+id/tvProfileWantToGoHeader"
 					android:layout_width="0dp"
 					android:layout_height="wrap_content"
-					android:padding="@dimen/general_margin_16"
+					android:padding="@dimen/general_size_16dp"
 
 					android:text="@string/want_to_go_text"
 					android:textSize="24sp"
@@ -149,7 +149,7 @@
 					android:layout_width="0dp"
 					android:layout_height="wrap_content"
 					android:clipToPadding="false"
-					android:padding="@dimen/general_margin_8"
+					android:padding="@dimen/general_size_8dp"
 					android:orientation="horizontal"
 					android:visibility="visible"
 
@@ -170,7 +170,7 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:orientation="vertical"
-					app:layout_constraintGuide_begin="@dimen/general_margin_8" />
+					app:layout_constraintGuide_begin="@dimen/general_size_8dp" />
 
 				<!-- right padding -->
 				<androidx.constraintlayout.widget.Guideline
@@ -178,7 +178,7 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:orientation="vertical"
-					app:layout_constraintGuide_end="@dimen/general_margin_8" />
+					app:layout_constraintGuide_end="@dimen/general_size_8dp" />
 
 			</androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -188,7 +188,7 @@
 			android:id="@+id/fabProfileSendMessage"
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"
-			android:layout_margin="@dimen/general_margin_16"
+			android:layout_margin="@dimen/general_size_16dp"
 			android:src="@drawable/ic_profile_send_message_24dp"
 			app:visibilityGone='@{isFabVisible}'
 
