--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 23.03.20 18:31
+  ~ Last modified 30.03.20 21:02
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -50,7 +50,7 @@
 
 					app:menu="@menu/settings_menu"
 
-					app:title="Настройки"
+					app:title="@string/bottom_navigation_settings"
 					app:titleTextAppearance="@style/ToolbarTitle"
 					app:titleTextColor="@color/white"
 
@@ -65,7 +65,7 @@
 					android:id="@+id/rvSettingsUserPhotosList"
 					android:layout_width="0dp"
 					android:layout_height="wrap_content"
-					android:layout_marginTop="@dimen/general_margin_16"
+					android:layout_marginTop="@dimen/general_size_16dp"
 					android:clipToPadding="false"
 					android:orientation="horizontal"
 					android:overScrollMode="never"
@@ -100,7 +100,7 @@
 					android:id="@+id/tvSettingsNameAge"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:layout_marginTop="@dimen/general_margin_16"
+					android:layout_marginTop="@dimen/general_size_16dp"
 
 					android:text="@{viewModel.currentUser.baseUserInfo.name+ `, `+ viewModel.currentUser.baseUserInfo.age, default = @string/default_name}"
 					android:textSize="22sp"
@@ -132,7 +132,7 @@
 					android:id="@+id/tvSettingsWantToGoHeader"
 					android:layout_width="0dp"
 					android:layout_height="wrap_content"
-					android:padding="@dimen/general_margin_16"
+					android:padding="@dimen/general_size_16dp"
 
 					android:text="@string/want_to_go_text"
 					android:textSize="24sp"
@@ -149,7 +149,7 @@
 					android:layout_width="0dp"
 					android:layout_height="wrap_content"
 					android:clipToPadding="false"
-					android:padding="@dimen/general_margin_8"
+					android:padding="@dimen/general_size_8dp"
 					android:orientation="horizontal"
 					android:visibility="visible"
 
@@ -168,7 +168,7 @@
 					android:id="@+id/tvSettingsAboutHeader"
 					android:layout_width="0dp"
 					android:layout_height="wrap_content"
-					android:padding="@dimen/general_margin_16"
+					android:padding="@dimen/general_size_16dp"
 
 					android:text="@string/profile_about_header_text"
 					android:textSize="24sp"
@@ -204,7 +204,7 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:orientation="vertical"
-					app:layout_constraintGuide_begin="@dimen/general_margin_8" />
+					app:layout_constraintGuide_begin="@dimen/general_size_8dp" />
 
 				<!-- right padding -->
 				<androidx.constraintlayout.widget.Guideline
@@ -212,7 +212,7 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:orientation="vertical"
-					app:layout_constraintGuide_end="@dimen/general_margin_8" />
+					app:layout_constraintGuide_end="@dimen/general_size_8dp" />
 
 
 			</androidx.constraintlayout.widget.ConstraintLayout>
@@ -224,7 +224,7 @@
 			android:id="@+id/fabSettingsEdit"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_margin="24dp"
+			android:layout_margin="@dimen/general_size_24dp"
 			android:src="@drawable/ic_create_24dp"
 			app:layout_anchor="@id/containerSettings"
 			app:layout_anchorGravity="bottom|end"
