--- a/app/src/main/res/drawable/ic_registration_heart_64.xml
+++ b/app/src/main/res/drawable/ic_registration_heart_64.xml
@@ -1,14 +1,20 @@
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 10.12.19 21:07
+  ~ Copyright (c) 2020. All rights reserved.
+  ~ Last modified 30.03.20 18:51
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
   ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
   -->
 
-<vector android:height="64dp" android:viewportHeight="50"
-    android:viewportWidth="50" android:width="64dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#D75A4A" android:pathData="M24.85,10.126c2.018,-4.783 6.628,-8.125 11.99,-8.125c7.223,0 12.425,6.179 13.079,13.543c0,0 0.353,1.828 -0.424,5.119c-1.058,4.482 -3.545,8.464 -6.898,11.503L24.85,48L7.402,32.165c-3.353,-3.038 -5.84,-7.021 -6.898,-11.503c-0.777,-3.291 -0.424,-5.119 -0.424,-5.119C0.734,8.179 5.936,2 13.159,2C18.522,2 22.832,5.343 24.85,10.126z"/>
+<vector
+    android:height="64dp"
+    android:viewportHeight="50"
+    android:viewportWidth="50"
+    android:width="64dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <path android:fillColor="@color/material_red_a700" android:pathData="M24.85,10.126c2.018,-4.783 6.628,-8.125 11.99,-8.125c7.223,0 12.425,6.179 13.079,13.543c0,0 0.353,1.828 -0.424,5.119c-1.058,4.482 -3.545,8.464 -6.898,11.503L24.85,48L7.402,32.165c-3.353,-3.038 -5.84,-7.021 -6.898,-11.503c-0.777,-3.291 -0.424,-5.119 -0.424,-5.119C0.734,8.179 5.936,2 13.159,2C18.522,2 22.832,5.343 24.85,10.126z"/>
+
 </vector>
