--- a/app/src/main/res/layout/fragment_pairs.xml
+++ b/app/src/main/res/layout/fragment_pairs.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 23.03.20 18:31
+  ~ Last modified 30.03.20 17:59
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -32,7 +32,7 @@
 			android:id="@+id/rvPairList"
 			android:layout_width="0dp"
 			android:layout_height="0dp"
-			android:layout_marginEnd="@dimen/general_margin_8"
+			android:layout_marginEnd="@dimen/general_size_8dp"
 			android:clipToPadding="false"
 			android:overScrollMode="never"
 			app:visibilityInvisible='@{!viewModel.showTextHelper}'
