--- a/app/src/main/res/layout/fragment_pairs_item.xml
+++ b/app/src/main/res/layout/fragment_pairs_item.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 25.03.20 16:08
+  ~ Last modified 30.03.20 21:02
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -24,10 +24,10 @@
 	<androidx.cardview.widget.CardView
 		android:layout_width="match_parent"
 		android:layout_height="@dimen/vertical_grid_item_height"
-		android:layout_marginStart="@dimen/card_margin_fix_rview_8"
-		android:layout_marginBottom="@dimen/card_margin_fix_rview_8"
+		android:layout_marginStart="@dimen/general_size_8dp"
+		android:layout_marginBottom="@dimen/general_size_8dp"
 		app:cardBackgroundColor="@color/transparent"
-		app:cardCornerRadius="10dp">
+		app:cardCornerRadius="@dimen/general_size_16dp">
 
 		<ImageView
 			android:layout_width="match_parent"
@@ -67,7 +67,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center|bottom"
-			android:padding="@dimen/general_margin_8"
+			android:padding="@dimen/general_size_8dp"
 
 			android:text="@{bindItem.baseUserInfo.name, default = @string/default_name}"
 			android:textSize="20sp"
