--- a/app/src/main/res/layout/fragment_settings_photo_item.xml
+++ b/app/src/main/res/layout/fragment_settings_photo_item.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 25.03.20 16:12
+  ~ Last modified 30.03.20 21:02
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -25,7 +25,7 @@
 		android:layout_width="@dimen/rvSettingsPhotoElementWidth"
 		android:layout_height="@dimen/rvSettingsPhotoElementHeight"
 		app:cardBackgroundColor="@color/transparent"
-		app:cardCornerRadius="16dp">
+		app:cardCornerRadius="@dimen/general_size_16dp">
 
 		<ImageView
 			android:id="@+id/ivUserItemPhoto"
