--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 15.03.20 17:27
+  ~ Last modified 30.03.20 18:28
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -9,10 +9,11 @@
   -->
 
 <resources>
-    <dimen name="nav_header_vertical_spacing">16dp</dimen>
-	<dimen name="general_margin_8">8dp</dimen>
-    <dimen name="general_margin_16">16dp</dimen>
-	<dimen name="card_margin_fix_rview_8">8dp</dimen>
-    <dimen name="notifbar_size_24">24dp</dimen>
+
+	<dimen name="general_size_2dp">2dp</dimen>
+	<dimen name="general_size_4dp">4dp</dimen>
+	<dimen name="general_size_8dp">8dp</dimen>
+    <dimen name="general_size_16dp">16dp</dimen>
+    <dimen name="general_size_24dp">24dp</dimen>
 
 </resources>
